--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
 </head>
 <body>
   <main class="w-full" style="padding-bottom:70px;">
-    <section class="simple-stock-hero">
-      <img src="your-image.jpg" alt="学習資料イメージ" class="mx-auto mb-4 w-full max-w-xs rounded-xl shadow">
-      <h1 class="text-3xl font-extrabold text-gray-800 mb-4">日本株式学習資料<br>無料プレゼント</h1>
-      <p class="text-lg text-gray-700 mb-6">LINEで「7」と返信するだけで、<br>株式投資の入門資料をすぐに受け取れます。</p>
-      <a href="https://line.me/ti/p/nU_DuevWBV" target="_blank" class="line-btn">
+    <section class="simple-stock-hero flex flex-col items-center justify-center bg-white rounded-xl shadow-lg max-w-md mx-auto p-6 mt-6">
+      <img src="https://raw.githubusercontent.com/ruda9405/jp2/main/photo_2025-08-11_21-04-31.jpg" alt="学習資料イメージ" class="mb-5 w-full max-w-xs rounded-xl shadow">
+      <h1 class="text-2xl sm:text-3xl font-extrabold text-gray-800 mb-3 text-center">日本株式学習資料<br>無料プレゼント</h1>
+      <p class="text-base sm:text-lg text-gray-700 mb-5 text-center">LINEで「7」と返信するだけで、<br>株式投資の入門資料をすぐに受け取れます。</p>
+      <a href="https://line.me/ti/p/nU_DuevWBV" target="_blank" class="line-btn w-full flex items-center justify-center gap-2 py-3 px-4 rounded-lg font-bold text-white bg-green-500 hover:bg-green-600 transition mb-3">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="currentColor" viewBox="0 0 24 24"><path d="M22.4 0H1.6C.7 0 0 .7 0 1.6v20.8c0 .9.7 1.6 1.6 1.6h20.8c.9 0 1.6-.7 1.6-1.6V1.6c0-.9-.7-1.6-1.6-1.6zM7.8 18.5h-3V9.6h3v8.9zM6.3 8.4c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.8 1.8-1.8 1.8zm11.9 10.1h-3v-4.4c0-1.1-.4-1.8-1.3-1.8-.7 0-1.2.5-1.4.9-.1.2-.1.4-.1.7v4.6h-3V9.6h3v1.3c.4-.6 1-1.4 2.7-1.4 2 0 3.4 1.3 3.4 4.1v4.9z"/></svg>
         LINEで受け取る
       </a>
-      <div class="tip-box">
-        <span>LINEで「7」と返信してください。<br>すぐに学習資料をお送りします。</span>
+      <div class="tip-box w-full text-center text-sm text-gray-600 bg-gray-100 rounded-lg py-2">
+        LINEで「7」と返信してください。すぐに学習資料をお送りします。
       </div>
     </section>
   </main>
