--- a/index.html
+++ b/index.html
@@ -105,39 +105,28 @@
   <main class="w-full" style="padding-bottom:70px;">
     <section class="simple-stock-hero flex flex-col items-center justify-center bg-white rounded-xl shadow-lg max-w-md mx-auto p-6 mt-6">
       <img src="https://raw.githubusercontent.com/ruda9405/jp2/main/photo_2025-08-11_21-04-31.jpg" alt="学習資料イメージ" class="mb-5 w-full max-w-xs rounded-xl shadow">
-      <h1 class="text-2xl sm:text-3xl font-extrabold text-gray-800 mb-3 text-center">日本株式学習資料<br>無料プレゼント</h1>
-      <p class="text-base sm:text-lg text-gray-700 mb-5 text-center">LINEで「7」と返信するだけで、<br>株式投資の入門資料をすぐに受け取れます。</p>
+      <h1 class="text-2xl sm:text-3xl font-extrabold text-gray-800 mb-3 text-center">日本株式学習資料<br>無料配布</h1>
+      <p class="text-base sm:text-lg text-gray-700 mb-5 text-center">株式の基礎知識や市場情報を学びたい方へ。<br>LINEで「7」と返信するだけで、初心者向けの入門資料を無料で受け取れます。</p>
       <a href="https://line.me/ti/p/nU_DuevWBV" target="_blank" class="line-btn w-full flex items-center justify-center gap-2 py-3 px-4 rounded-lg font-bold text-white bg-green-500 hover:bg-green-600 transition mb-3">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="currentColor" viewBox="0 0 24 24"><path d="M22.4 0H1.6C.7 0 0 .7 0 1.6v20.8c0 .9.7 1.6 1.6 1.6h20.8c.9 0 1.6-.7 1.6-1.6V1.6c0-.9-.7-1.6-1.6-1.6zM7.8 18.5h-3V9.6h3v8.9zM6.3 8.4c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.8 1.8-1.8 1.8zm11.9 10.1h-3v-4.4c0-1.1-.4-1.8-1.3-1.8-.7 0-1.2.5-1.4.9-.1.2-.1.4-.1.7v4.6h-3V9.6h3v1.3c.4-.6 1-1.4 2.7-1.4 2 0 3.4 1.3 3.4 4.1v4.9z"/></svg>
         LINEで受け取る
       </a>
       <div class="tip-box w-full text-center text-sm text-gray-600 bg-gray-100 rounded-lg py-2">
-        LINEで「7」と返信してください。すぐに学習資料をお送りします。
+        LINEで「7」と返信してください。学習資料をお送りします。
       </div>
     </section>
     <div class="stock-copy w-full text-base text-gray-800 bg-white rounded-xl shadow-lg p-5 mb-5 text-center leading-relaxed">
-      <h2 class="text-xl font-bold text-green-600 mb-3">株式投資で未来を変える第一歩を、今ここから。</h2>
-      <p class="mb-3">日本の株式市場は、世界でも有数の規模と歴史を誇り、日々多くの企業が成長と挑戦を続けています。株式投資は、企業の成長を応援しながら、ご自身の資産形成にも役立つ魅力的な選択肢です。</p>
-      <p class="mb-3">初心者の方には「株って何？」「どうやって始めるの？」という疑問が多いかもしれません。経験者の方も「今の市場動向は？」「リスク管理のコツは？」など、常に新しい情報や知識が求められます。</p>
-      <p class="mb-3">本ページでは、<span class="font-bold text-green-700">株式投資の基礎知識から最新トレンド、実践的な運用ポイント</span>まで、幅広い内容を分かりやすくまとめた無料学習資料をLINEで配布しています。<br>「7」と返信するだけで、すぐに受け取れます。</p>
+      <h2 class="text-xl font-bold text-green-600 mb-3">株式の基礎を学び、情報収集を始めよう</h2>
+      <p class="mb-3">このページは日本株式に関する基礎知識や市場情報を学びたい方のための情報提供を目的としています。<br>資料は初心者向けの内容で、株式の仕組みや用語、市場の特徴などを分かりやすくまとめています。</p>
       <p class="mb-3">資料内容例：</p>
       <ul class="list-disc list-inside text-left mx-auto max-w-xs mb-3 text-gray-700">
-        <li>株式投資の基本用語・仕組み</li>
-        <li>証券口座の開設方法と注意点</li>
-        <li>日本市場の特徴と主要な業種</li>
-        <li>初心者が失敗しないためのポイント</li>
-        <li>経験者向けの最新市場分析・トレンド</li>
-        <li>リスク管理と資産運用のコツ</li>
-        <li>よくある質問と実践アドバイス</li>
-        <li>株価チャートの見方・分析の基礎</li>
-        <li>長期投資・短期売買の考え方</li>
-        <li>分散投資・ポートフォリオ構築のヒント</li>
+        <li>株式の基本用語・仕組み</li>
+        <li>証券口座の開設方法</li>
+        <li>日本市場の特徴</li>
+        <li>情報収集のコツ</li>
+        <li>よくある質問と基礎解説</li>
       </ul>
-      <p class="mb-3">株式投資は、経済や社会の動きと密接に関わっています。例えば、企業の決算発表や新製品のリリース、世界的な経済ニュースなどが株価に影響を与えることもあります。<br>資料では、こうした市場の動きや情報収集のコツも丁寧に解説しています。</p>
-      <p class="mb-3">「投資は難しそう…」「もっと効率よく学びたい」「今のやり方で合っているか不安」<br>そんな方こそ、ぜひLINEでご相談ください。<span class="font-bold text-green-700">あなたの疑問や悩みに、個別で丁寧にお答えします。</span></p>
-      <p class="mb-3">今すぐLINEで「7」と返信して、<span class="font-bold text-green-700">株式投資のスタートダッシュ</span>を切りましょう！<br>資料は完全無料・何度でもご相談OKです。<br>投資の世界は一人で悩むより、正しい知識と仲間のサポートが大切です。</p>
-      <p class="mb-3">株式投資はリスクもありますが、しっかり学び、計画的に取り組むことで、資産形成の大きな味方になります。<br>まずは無料資料で、あなたの投資力を一歩ずつ高めてみませんか？</p>
-      <p class="text-sm text-gray-500 mt-4">※本サービスは情報提供のみを目的としており、特定銘柄の推奨や投資助言は行いません。ご利用は自己責任でお願いいたします。</p>
+      <!-- 免责声明内容已移至弹窗内，主页面不再直接展示 -->
     </div>
   </main>
     <footer class="bg-gray-900 text-white py-6 mt-8 text-center text-xs">
@@ -179,8 +168,8 @@
         <ol class="list-decimal list-inside space-y-2 text-sm text-gray-700">
           <li>本ページは日本株式の基礎知識や学習資料を無料でご案内するものです。</li>
           <li>初心者の方でも安心して学べる内容となっており、投資の判断はご自身の責任でお願いいたします。</li>
-          <li>資料は情報提供を目的としており、特定銘柄の推奨や投資助言は行いません。</li>
-          <li>ご不明点はLINEでお気軽にご相談ください。</li>
+          <li>資料及び本服务仅供参考，不推荐特定股票或提供投资建议。请自行承担风险。</li>
+          <li>我们不做任何投资决策，亦不提供买卖建议。如有任何疑问，请随时通过LINE联系我们。</li>
         </ol>
         <p class="text-xs text-gray-500 mt-4">本免責事項は概要です。詳細は運営者までお問い合わせください。</p>
       </div>
