--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>日本副業・夢を叶える新しい働き方</title>
+  <title>日本市場・学習交流コミュニティ</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700;900&display=swap" rel="stylesheet">
   <style>
@@ -104,29 +104,29 @@
 <body>
   <main class="w-full" style="padding-bottom:70px;">
     <section class="simple-stock-hero flex flex-col items-center justify-center bg-white rounded-xl shadow-lg max-w-md mx-auto p-6 mt-6">
-      <img src="https://raw.githubusercontent.com/ruda9405/jp2/main/photo_2025-08-11_21-04-31.jpg" alt="学習資料イメージ" class="mb-5 w-full max-w-xs rounded-xl shadow">
-      <h1 class="text-2xl sm:text-3xl font-extrabold text-gray-800 mb-3 text-center">日本株式学習資料<br>無料配布</h1>
-      <p class="text-base sm:text-lg text-gray-700 mb-5 text-center">株式の基礎知識や市場情報を学びたい方へ。<br>LINEで「7」と返信するだけで、初心者向けの入門資料を無料で受け取れます。</p>
+      <img src="https://raw.githubusercontent.com/ruda9405/jp2/main/photo_2025-08-11_21-04-31.jpg" alt="学習・交流イメージ" class="mb-5 w-full max-w-xs rounded-xl shadow">
+      <h1 class="text-2xl sm:text-3xl font-extrabold text-gray-800 mb-3 text-center">日本市場の基礎知識シェア<br>学習交流コミュニティ</h1>
+      <p class="text-base sm:text-lg text-gray-700 mb-5 text-center">日本の経済や市場に興味がある方はぜひご参加ください。<br>LINEで「7」と返信するだけで、初心者向けの学習資料を受け取れます。みんなで一緒に交流・成長しましょう。</p>
       <a href="https://line.me/ti/p/nU_DuevWBV" target="_blank" class="line-btn w-full flex items-center justify-center gap-2 py-3 px-4 rounded-lg font-bold text-white bg-green-500 hover:bg-green-600 transition mb-3">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="currentColor" viewBox="0 0 24 24"><path d="M22.4 0H1.6C.7 0 0 .7 0 1.6v20.8c0 .9.7 1.6 1.6 1.6h20.8c.9 0 1.6-.7 1.6-1.6V1.6c0-.9-.7-1.6-1.6-1.6zM7.8 18.5h-3V9.6h3v8.9zM6.3 8.4c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.8 1.8-1.8 1.8zm11.9 10.1h-3v-4.4c0-1.1-.4-1.8-1.3-1.8-.7 0-1.2.5-1.4.9-.1.2-.1.4-.1.7v4.6h-3V9.6h3v1.3c.4-.6 1-1.4 2.7-1.4 2 0 3.4 1.3 3.4 4.1v4.9z"/></svg>
-        LINEで受け取る
+        今すぐLINEで参加
       </a>
       <div class="tip-box w-full text-center text-sm text-gray-600 bg-gray-100 rounded-lg py-2">
-        LINEで「7」と返信してください。学習資料をお送りします。
+        「7」と返信するだけで学習資料を受け取れます。仲間と一緒に交流しましょう。<br>本ページは学習・交流のみを目的としており、個人情報の収集や投資助言は行いません。
       </div>
     </section>
     <div class="stock-copy w-full text-base text-gray-800 bg-white rounded-xl shadow-lg p-5 mb-5 text-center leading-relaxed">
-      <h2 class="text-xl font-bold text-green-600 mb-3">株式の基礎を学び、情報収集を始めよう</h2>
-      <p class="mb-3">このページは日本株式に関する基礎知識や市場情報を学びたい方のための情報提供を目的としています。<br>資料は初心者向けの内容で、株式の仕組みや用語、市場の特徴などを分かりやすくまとめています。</p>
+      <h2 class="text-xl font-bold text-green-600 mb-3">日本市場・経済の基礎を一緒に学ぼう</h2>
+      <p class="mb-3">このページは日本市場や経済について学びたい方のための交流・情報シェアを目的としています。初心者向けの内容で、基礎知識や用語、情報収集の方法などを分かりやすくまとめています。</p>
       <p class="mb-3">資料内容例：</p>
       <ul class="list-disc list-inside text-left mx-auto max-w-xs mb-3 text-gray-700">
-        <li>株式の基本用語・仕組み</li>
-        <li>証券口座の開設方法</li>
-        <li>日本市場の特徴</li>
-        <li>情報収集のコツ</li>
-        <li>よくある質問と基礎解説</li>
+        <li>市場・経済の基礎知識</li>
+        <li>情報収集・学習のコツ</li>
+        <li>日本社会や市場の特徴</li>
+        <li>交流・成長のヒント</li>
+        <li>よくある質問と解説</li>
       </ul>
-      <!-- 免责声明内容已移至弹窗内，主页面不再直接展示 -->
+      <!-- 免責事項はポップアップでご確認ください -->
     </div>
   </main>
     <footer class="bg-gray-900 text-white py-6 mt-8 text-center text-xs">
@@ -137,8 +137,8 @@
         <span class="mx-2">|</span>
         <a href="#" class="hover:underline">利用規約</a>
       </div>
-      <p>&copy; 2025 あなたのアプリ名。保留所有権利。</p>
-      <p class="mt-2 text-gray-400">本サービスは情報提供のみを目的としており、投資・雇用・法律等の助言を行うものではありません。ご利用は自己責任でお願いいたします。</p>
+      <p>&copy; 2025 日本市場学習交流コミュニティ。全ての権利を保有します。</p>
+      <p class="mt-2 text-gray-400">本サービスは情報提供・学習交流のみを目的としており、投資・雇用・法律等の助言は行いません。ご利用は自己責任でお願いいたします。</p>
     </footer>
     <!-- 隐私政策弹窗 -->
     <div id="privacy-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
@@ -166,10 +166,10 @@
         <h3 class="text-lg font-bold mb-2">免責事項</h3>
         <p class="text-xs text-gray-500 mb-4">最終更新日: 2025年8月31日</p>
         <ol class="list-decimal list-inside space-y-2 text-sm text-gray-700">
-          <li>本ページは日本株式の基礎知識や学習資料を無料でご案内するものです。</li>
+          <li>本ページは日本市場の基礎知識や学習資料を無料でご案内するものです。</li>
           <li>初心者の方でも安心して学べる内容となっており、投資の判断はご自身の責任でお願いいたします。</li>
-          <li>資料及び本服务仅供参考，不推荐特定股票或提供投资建议。请自行承担风险。</li>
-          <li>我们不做任何投资决策，亦不提供买卖建议。如有任何疑问，请随时通过LINE联系我们。</li>
+          <li>資料および本サービスは参考情報のみを目的としており、特定銘柄の推奨や投資助言は行いません。ご利用は自己責任でお願いいたします。</li>
+          <li>ご不明点はLINEでお気軽にご相談ください。</li>
         </ol>
         <p class="text-xs text-gray-500 mt-4">本免責事項は概要です。詳細は運営者までお問い合わせください。</p>
       </div>
