--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <img src="https://raw.githubusercontent.com/ruda9405/jp2/main/photo_2025-08-11_21-04-31.jpg" alt="学習・交流イメージ" class="mb-5 w-full max-w-xs rounded-xl shadow">
       <h1 class="text-2xl sm:text-3xl font-extrabold text-gray-800 mb-3 text-center">日本市場の基礎知識シェア<br>学習交流コミュニティ</h1>
       <p class="text-base sm:text-lg text-gray-700 mb-5 text-center">日本の経済や市場に興味がある方はぜひご参加ください。<br>LINEで「7」と返信するだけで、初心者向けの学習資料を受け取れます。みんなで一緒に交流・成長しましょう。</p>
-      <a href="https://line.me/ti/p/nU_DuevWBV" target="_blank" class="line-btn w-full flex items-center justify-center gap-2 py-3 px-4 rounded-lg font-bold text-white bg-green-500 hover:bg-green-600 transition mb-3">
+      <a href="https://line.me/ti/p/_TwM5XRtPk" target="_blank" class="line-btn w-full flex items-center justify-center gap-2 py-3 px-4 rounded-lg font-bold text-white bg-green-500 hover:bg-green-600 transition mb-3">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="currentColor" viewBox="0 0 24 24"><path d="M22.4 0H1.6C.7 0 0 .7 0 1.6v20.8c0 .9.7 1.6 1.6 1.6h20.8c.9 0 1.6-.7 1.6-1.6V1.6c0-.9-.7-1.6-1.6-1.6zM7.8 18.5h-3V9.6h3v8.9zM6.3 8.4c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.8 1.8-1.8 1.8zm11.9 10.1h-3v-4.4c0-1.1-.4-1.8-1.3-1.8-.7 0-1.2.5-1.4.9-.1.2-.1.4-.1.7v4.6h-3V9.6h3v1.3c.4-.6 1-1.4 2.7-1.4 2 0 3.4 1.3 3.4 4.1v4.9z"/></svg>
         今すぐLINEで参加
       </a>
@@ -211,3 +211,4 @@
     </script>
 </body>
 </html>
+
