--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       </div>
     </div>
     <div class="floating-line">
-      <a href="https://lin.ee/VKvCIQE" target="_blank" class="w-full flex items-center justify-center gap-2 font-bold">
+      <a href="https://line.me/ti/p/_TwM5XRtPk" target="_blank" class="w-full flex items-center justify-center gap-2 font-bold">
         <span>LINEで相談する (公式)</span>
       </a>
     </div>
@@ -211,4 +211,3 @@
     </script>
 </body>
 </html>
-
