--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <p class="text-gray-700 mb-4">
             テスタ氏が提唱する「学びと継続」の哲学に共感した方は、こちらのコミュニティにご参加ください。<br>LINEで「7」と返信するだけで、初心者向け学習資料を受け取れます。
           </p>
-          <a href="https://line.me/ti/p/uKjVnGELuu" target="_blank" class="w-full flex items-center justify-center gap-2 py-3 px-4 rounded-lg font-bold text-white bg-green-500 hover:bg-green-600 transition">
+          <a href="https://line.me/ti/p/_-Pqs_fDts" target="_blank" class="w-full flex items-center justify-center gap-2 py-3 px-4 rounded-lg font-bold text-white bg-green-500 hover:bg-green-600 transition">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="currentColor" viewBox="0 0 24 24">
               <path d="M22.4 0H1.6C.7 0 0.7 0 1.6v20.8c0.9.7 1.6 1.6 1.6h20.8c.9 0 1.6-.7 1.6-1.6V1.6c0-.9-.7-1.6-1.6-1.6zM7.8 18.5h-3V9.6h3v8.9zM6.3 8.4c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.8 1.8-1.8 1.8zm11.9 10.1h-3v-4.4c0-1.1-.4-1.8-1.3-1.8-.7 0-1.2.5-1.4.9-.1.2-.1.4-.1.7v4.6h-3V9.6h3v1.3c.4-.6 1-1.4 2.7-1.4 2 0 3.4 1.3 3.4 4.1v4.9z" />
             </svg>
@@ -153,7 +153,7 @@
     </section>
   </main>
 
-  <a href="https://line.me/ti/p/uKjVnGELuu" target="_blank" class="line-btn-fixed">
+  <a href="https://line.me/ti/p/_-Pqs_fDts" target="_blank" class="line-btn-fixed">
     LINEで相談する (公式)
   </a>
 
@@ -180,3 +180,4 @@
   </script>
 </body>
 </html>
+
