--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <meta name="google-site-verification" content="BaMLvKxcwAeI0-Irts-Tocxdc8BTQYdWkdk_bt1KWwc" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>投資家の哲学と実績：公開情報まとめ</title>
@@ -180,4 +181,5 @@
   </script>
 </body>
 </html>
+
 
